# Deep-Learning-Specialization-1-Neural-Networks-and-Deep-Learning

./: README.md  pyproject.toml
django_course_site/django_course_site/: settings.py  urls.py
django_course_site/meetups/: admin.py  forms.py  models.py  urls.py  views.py
django_course_site/meetups/migrations/: 0001_initial.py
django_course_site/meetups/templates/meetups/: index.html  meetup-detail.html  registration-success.html
django_course_site/meetups/templates/meetups/base/: base.html
django_course_site/meetups/templates/meetups/includes/: meetup-item.html
